fixed formatting issues on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,7 +202,7 @@ height: 100%;
   transition: 1s opacity;
 }
 
-.animationClass, .fadeText-film, .logo, .fadeContact {
+.animationClass, .fadeText-film, .logo, .fadeContact, .content {
   opacity: 1;
   transition: 2s opacity;
 }
@@ -807,6 +807,7 @@ background-color: #B30739;
   
    .name, .name2, .name3 {
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
     padding-top: 20px;
     font-size: 40px;
    }
@@ -840,6 +841,16 @@ background-color: #B30739;
     background-attachment: scroll;
 }
 
+.parallax {
+  background-attachment: scroll;
+}
+
+.aacta {
+  width: 60%;
+  height: auto; 
+  padding-bottom: 10px;
+}
+
 .filmText {
   max-width: 500px;
   margin: 0 auto;
@@ -852,10 +863,7 @@ background-color: #B30739;
 
 }
 
-.menu-items {
-  justify-content: left;
-  left:30%;
-}
+
 
 .list {
   color: white;
@@ -877,6 +885,7 @@ background-color: #B30739;
   text-align: left;
   padding-left: 0px !important;
   color: white;
+  right: 20%;
 
 
 }
